prompt quiz timer aligned & leave quiz buttons now in correct place and called only in prmptquiz & mainquiz

--- a/my-app/src/Components/MainQuiz/MainQuiz.css
+++ b/my-app/src/Components/MainQuiz/MainQuiz.css
@@ -2,8 +2,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     height:100vh;
     width: 100vw;
     background-color: #f7f7f7;
+}
+
+.exit-quiz {
+    padding: 15px;
+    align-self: flex-start;
+    justify-self: flex-start;
 }
